--- a/css/farsi_site.css
+++ b/css/farsi_site.css
@@ -10,7 +10,7 @@ and open the template in the editor.
 
 @font-face {
     font-family: IranSans;
-    src: url(../FONT/IRANSansWeb_Light.ttf);
+    src: url(../FONT/IranSansWeb_Light.ttf);
 }
 
 .divclass
