--- a/css/farsi_site.css
+++ b/css/farsi_site.css
@@ -24,6 +24,10 @@ h1,h2,h3,h4,h5,h6
     font-family: IranSans , Tahoma;
 }
 
+a:hover {
+    foreground-color: blue;
+}
+
 .bodyclass
 {
     direction: rtl;
