--- a/css/farsi_site.css
+++ b/css/farsi_site.css
@@ -13,7 +13,7 @@ and open the template in the editor.
     src: url(../FONT/IranSansWeb_Light.ttf);
 }
 
-h1,h2,h3,h4,h5,h6 
+h1
 {
     font-family: IranSans , Tahoma;
 }
