--- a/css/farsi_site.css
+++ b/css/farsi_site.css
@@ -15,7 +15,7 @@ and open the template in the editor.
 
 h1
 {
-    font-family: IranSans , Tahoma;
+    font-family: IranSans;
 }
 
  /* unvisited link */
