--- a/css/farsi_site.css
+++ b/css/farsi_site.css
@@ -91,3 +91,35 @@ h1,h2,h3,h4,h5,.h1,.h2,.h3,.h4,.h5
     font-family: IranSans;
 }
 
+h1
+{
+    font-size:36px
+}
+
+h2
+{
+    font-size:30px
+}
+
+h3
+{
+    font-size:24px
+}
+
+h4
+{
+    font-size:20px
+}
+
+
+h5
+{
+    font-size:18px
+}
+
+h6
+{
+    font-size:16px
+}
+
+
