--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -16,17 +16,13 @@ body
 
 *
 {
-  font-size: 11pt; 
+  font-size: 11pt;
   font-family: Tahoma, Verdana, sans-serif; 
   color: #000000;
   text-align: left;
 }
 
-
-
 /* === Containers === */
-
-
 
 #mainContentArea
 {
@@ -47,19 +43,31 @@ float: left;
 margin-top:24px;
 text-align:center;
 font-family:Georgia, "Times New Roman", Times, serif;
-background-image:url(tab.gif);
+background-image:url(./img/tab.gif);
 position:relative; bottom:0px;
 }
 
 .link:hover
 {
-background-image:url(tab2.gif);
+background-image:url(./img/tab2.gif);
 }
 
-a
+a:link
 {
 text-decoration:none;
+/*background-color: yellow*/
+color: DarkBlue;
 }
+/* mouse over link */
+a:hover {
+    color: Blue;
+}
+/* visited link */
+a:visited {
+    /* color: DarkViolet;*/
+    color: DarkBlue;
+}
+
 
 .link a{
 font-family:Arial, Helvetica, sans-serif;
@@ -69,7 +77,7 @@ font-weight:bold;
 
 #linkGroup
 {
-margin-right:10px;
+margin-right:11px;
 height:40px;
 width:600px;
 }
@@ -108,7 +116,6 @@ margin-right:20px;
 width:560px;
 }
 
-
 #blueBox
 {
 	position: absolute;
@@ -123,7 +130,7 @@ width:560px;
 width:600px;
 height:20px;
 background-color:#FFFFFF;
-background-image:url(header.gif);
+background-image:url(./img/header.gif);
 background-repeat:no-repeat;
 }
 
@@ -132,7 +139,7 @@ background-repeat:no-repeat;
 width:600px;
 height:20px;
 background-color:#FFFFFF;
-background-image:url(footer.gif);
+background-image:url(./img/footer.gif);
 background-repeat:no-repeat;
 text-align:center;
 padding-right:10px;
@@ -140,7 +147,7 @@ color:#BDCDEC;
 }
 #footer a
 {
-font-size:10px;
+font-size:11px;
 color:#BDCDEC;
 }
 
@@ -148,7 +155,6 @@ color:#BDCDEC;
 {
 margin-top:25px;
 }
-
 
 
 html, body {
