Complete homepage and links.

--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -63,7 +63,7 @@ color: DarkBlue;
 a:hover {
 /*text-decoration:Underline;*/
 background-color: PowderBlue;
-color: White;
+color: Blue;
 }
 /* visited link */
 a:visited
