--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -140,6 +140,7 @@ background-repeat:no-repeat;
 
 #footer
 {
+font-size:12px;
 width:600px;
 height:20px;
 background-color:#FFFFFF;
@@ -147,12 +148,12 @@ background-image:url(./img/footer.gif);
 background-repeat:no-repeat;
 text-align:center;
 padding-right:10px;
-color:#BDCDEC;
+color:#444444;
 }
 #footer a
 {
-font-size:15px;
-color:#BDCDEC;
+font-size:12px;
+color:#4d4e66;
 }
 
 #contentBox
