--- a/content/static/css/custom.css
+++ b/content/static/css/custom.css
@@ -1,3 +1,24 @@
+
+@font-face {
+  font-family: sitka;
+  src: url(./sitka/sitka.ttc);
+}
+
 img {
     box-shadow: 0px 0px 5px white;
+}
+
+
+body {
+font-family: sitka;
+text-align: justify;
+}
+
+th, td {
+  padding: 10px;
+  text-align: left;
+}
+
+tr:hover {
+    background-color: #f5f5f5;
 }
