--- a/content/static/css/custom.css
+++ b/content/static/css/custom.css
@@ -4,7 +4,7 @@
   src: url(./sitka/sitka.ttc);
 }
 
-body {
+html, body {
 font-family: sitka;
 text-align: justify;
 width: 90%;
@@ -28,5 +28,4 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 99%;
 }
