--- a/content/static/css/custom.css
+++ b/content/static/css/custom.css
@@ -30,3 +30,26 @@ img {
     margin-left: auto;
     margin-right: auto;
 }
+
+img[alt="Morteza ZAKERI"] {
+    box-shadow: 0px 0px 100px white;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+aside {
+    background-color: #68181a;
+	color:#62fbc2;
+	text-align: center;
+}
+
+
+aside nav ul li {
+    line-height: 1.6em;
+    font-size: 1.28em;
+}
+
+aside a:hover {
+  color: yellow;
+}
