--- a/content/static/css/custom.css
+++ b/content/static/css/custom.css
@@ -30,6 +30,9 @@ img {
     margin-left: auto;
     margin-right: auto;
 }
+img:hover {
+    box-shadow: 0px 0px 45px white;
+}
 
 img[alt="Morteza ZAKERI"] {
     box-shadow: 0px 0px 100px white;
@@ -38,17 +41,18 @@ img[alt="Morteza ZAKERI"] {
 	margin-right: auto;
 }
 
+
+
 aside {
-    background-color: #68181a;
+    background-color: #1e093a;
 	color:#62fbc2;
 	text-align: center;
 }
 
-
 aside nav ul li {
     display: inline;
-    line-height: 1.6em;
-    font-size: 1.28em;
+    line-height: 1.25em;
+    font-size: 1.15em;
     text-transform: none
 }
 
