--- a/content/static/css/custom.css
+++ b/content/static/css/custom.css
@@ -36,7 +36,7 @@ img {
     margin-right: auto;
 }
 img:hover {
-    box-shadow: 0px 0px 35px white;
+    box-shadow: 0px 0px 25px white;
 }
 
 img[alt="Morteza ZAKERI"] {
@@ -85,4 +85,59 @@ aside a:hover {
 h2, h3, h4, h5, h6 {
   text-align: left;
   line-height: 1.45;
+}
+
+
+/* Style for buttons used in teaching page and other places */
+
+.button {
+        color: #ffffff;
+        font-size: 18px;
+        border: 1px solid;
+        padding: 20px 50px;
+        margin: 8px;
+        cursor: pointer;
+        width: 215px; /* Ensures consistent button size */
+        text-align: center;
+        display: inline-block;
+}
+
+.button.blue {
+    background-color: #1a55c1;
+    border-color: #2d63c8;
+}
+
+.button.blue:hover {
+    color: #2d63c8;
+    background-color: #ffffff;
+}
+
+.button.pink {
+    background-color: #c82d8f;
+    border-color: #bd2dc8;
+}
+
+.button.pink:hover {
+    color: #c82d8f;
+    background-color: #ffffff;
+}
+
+.button.green {
+    background-color: #28a745;
+    border-color: #218838;
+}
+
+.button.green:hover {
+    color: #218838;
+    background-color: #ffffff;
+}
+
+.button.orange {
+    background-color: #fd7e14;
+    border-color: #e96000;
+}
+
+.button.orange:hover {
+    color: #e96000;
+    background-color: #ffffff;
 }
